--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "prop-types": "15.6.0",
     "query-string": "5.0.1",
     "react": "16.2.0",
+    "react-clipboard.js": "1.1.3",
     "react-dom": "16.2.0",
     "react-immutable-proptypes": "2.1.0",
     "react-redux": "5.0.6",
